Edits in Package.json

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "profile",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Bryan-Cee.github.io/",
+  "homepage": "https://Njogu-Ndegwa.github.io/",
   "dependencies": {
     "axios": "^0.19.2",
     "eslint": "5.12.0",
